--- a/templates/config.html
+++ b/templates/config.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='config.css') }}" media="screen" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='slider.css') }}" media="screen" />
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='config.css') }}" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='slider.css') }}" media="screen" /> -->
+    <link rel="stylesheet" type="text/css" href="../static/config.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="../static/slider.css" media="screen" />
     <title>Configurações</title>
 </head>
 <body>
