--- a/templates/config.html
+++ b/templates/config.html
@@ -8,31 +8,35 @@
     <title>Configurações</title>
 </head>
 <body>
-    <div class="container">
+    <form method="POST" action="/config">
         <h1>Configurações</h1>
         <div class="slider-container">
             <div class="slider__dificult">
                 <p>Dificuldade: </p>
                 <span id="difficultyLabel">Iniciante</span>
             </div>
-            <input type="range" min="0" max="3" value="0" class="slider" id="myRange">
+            <input type="range" min="0" max="3" value="0" class="slider" id="myRange" name="dificuldade">
             <div id="container__btn">
-                <button>Enviar</button>
+                <button type="submit" id="salvar__btn">Salvar</button>
             </div>
         </div>
-    </div>
+    </form>
 </body>
 </html>
 
 <script>
-document.addEventListener("DOMContentLoaded", function() {
-    var slider = document.getElementById("myRange");
-    var output = document.getElementById("difficultyLabel");
-    const difficultyLevels = ["Iniciante", "Fácil", "Médio", "Difícil"];
-    
-    slider.addEventListener("input", function() {
-        const difficultyValue = parseInt(slider.value);
-        output.textContent = difficultyLevels[difficultyValue];
+    document.addEventListener("DOMContentLoaded", function() {
+        var slider = document.getElementById("myRange");
+        var output = document.getElementById("difficultyLabel");
+        const difficultyLevels = ["Iniciante", "Fácil", "Médio", "Difícil"];
+        
+        slider.addEventListener("input", function() {
+            const difficultyValue = parseInt(slider.value);
+            output.textContent = difficultyLevels[difficultyValue];
+        });
     });
-});    
+
+    function salvar(){
+        var input = document.getElementById('myRange').value;
+    }   
 </script>
