feat: modal de instruções, mais logica de dificuldade aleatoria

--- a/templates/config.html
+++ b/templates/config.html
@@ -19,7 +19,7 @@
             </div>
             <input type="range" min="0" max="3" value="0" class="slider" id="myRange" name="dificuldade">
             <div id="container__btn">
-                <button type="submit" id="salvar__btn">Salvar</button>
+                <button type="submit" id="salvar__btn">Jogar</button>
             </div>
         </div>
     </form>
