--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styled.css') }}" media="screen" /> -->
     <link rel="stylesheet" type="text/css" href="../static/styled.css" media="screen" />
-
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <style>
+        .swal2-title {
+            color: #002645; 
+        }
+    </style>
     <title>Xadrez</title>
 </head>
 <body>
@@ -29,11 +33,14 @@
         title: "Instruções",
         text: "Para setar uma dificuldade, clique no botão configurações, caso prefira uma dificuldade aleatoria clique em jogar",
         icon: "warning",
+        iconColor: "#005795",
         showDenyButton: true,
         confirmButtonColor: "#002645",
         denyButtonColor: "#00A2FF",
         confirmButtonText: "Confirmar",
-        denyButtonText: `Configurações`
+        denyButtonText: `Configurações`,
+        allowOutsideClick: false,
+        showCloseButton: true
     }).then((result) => {
         if (result.isConfirmed) {
             window.location.href = 'http://127.0.0.1:5000/jogar?df=true';
