--- a/templates/jogar.html
+++ b/templates/jogar.html
@@ -67,12 +67,11 @@
 
         setInterval(updateBoardRequest, 5000);
         
-
         var xequeEstado = "{{ xeque }}";
         var xequeOrigem = "{{ origem_xeque }}";
 
         if( xequeEstado == true ){
-            if( xequeOrigem == 'Xeque Robo' ){
+            //if( xequeOrigem == 'Xeque Robo' ){
                 Swal.fire({
                     title: "Xeque Mate",
                     text: "Você perdeu, Lixo, Para reiniciar clique em Confirmar",
@@ -89,12 +88,11 @@
                     }
                 })
 
-            }else{
+            /*}else{
                 Swal.fire({
                     title: "Xeque Mate",
                     text: "Parabens você conseguiu um proeza jamais visto!!",
                     icon: "success",
-                    /*iconColor: "#005795",*/
                     showDenyButton: false,
                     confirmButtonColor: "#002645",
                     denyButtonColor: "#00A2FF",
@@ -106,7 +104,7 @@
                     }
                 })
 
-            }
+            }*/
         }
     });
 
