fix: recarregamento da página e correção dos alertas

--- a/templates/jogar.html
+++ b/templates/jogar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="refresh" content="5"> -->
+    <!-- <meta http-equiv="refresh" content="2"> -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='jogar.css') }}">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -64,48 +64,48 @@
                 }
             };
             xhr.send();
-        }
 
-        updateBoardRequest()
-        // setInterval(updateBoardRequest, 5000);
-        
-        var xequeEstado = "{{ _DEBUG }}";
+            var xequeEstado = "{{ _DEBUG }}";
 
-        console.log(xequeEstado);
+            console.log(xequeEstado);
 
-        if( xequeEstado == 'robo' ){
+            if( xequeEstado == 'robo' ){
+                    Swal.fire({
+                        title: "Xeque Mate",
+                        text: "Você perdeu, Lixo, Para reiniciar clique em Confirmar",
+                        icon: "warning",
+                        iconColor: "#005795",
+                        showDenyButton: false,
+                        confirmButtonColor: "#002645",
+                        denyButtonColor: "#00A2FF",
+                        confirmButtonText: "Confirmar",
+                        allowOutsideClick: false,
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            window.location.href = 'http://127.0.0.1:5000/';
+                        }
+                    })
+
+            }else if(xequeEstado == 'human'){
                 Swal.fire({
                     title: "Xeque Mate",
-                    text: "Você perdeu, Lixo, Para reiniciar clique em Confirmar",
-                    icon: "warning",
-                    iconColor: "#005795",
+                    text: "Parabens você conseguiu uma proeza jamais vista!!",
+                    icon: "success",
                     showDenyButton: false,
                     confirmButtonColor: "#002645",
                     denyButtonColor: "#00A2FF",
-                    confirmButtonText: "Confirmar",
+                    confirmButtonText: "Reiniciar",
                     allowOutsideClick: false,
                 }).then((result) => {
                     if (result.isConfirmed) {
                         window.location.href = 'http://127.0.0.1:5000/restart_game?df=true';
                     }
                 })
-
-        }else if(xequeEstado == 'human'){
-            Swal.fire({
-                title: "Xeque Mate",
-                text: "Parabens você conseguiu uma proeza jamais vista!!",
-                icon: "success",
-                showDenyButton: false,
-                confirmButtonColor: "#002645",
-                denyButtonColor: "#00A2FF",
-                confirmButtonText: "Reiniciar",
-                allowOutsideClick: false,
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    window.location.href = 'http://127.0.0.1:5000/restart_game?df=true';
-                }
-            })
+            }
         }
+
+        // updateBoardRequest()
+        setInterval(updateBoardRequest, 500);
     });
 
     
