--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
         showCloseButton: true
     }).then((result) => {
         if (result.isConfirmed) {
-            window.location.href = 'http://127.0.0.1:5000/restart_game?df=true';
+            window.location.href = 'http://127.0.0.1:5000/jogar?df=true';
         } else if (result.isDenied) {
             window.location.href = 'http://127.0.0.1:5000/config'
         }
